--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc",
     "start": "tsc && node ./dist/server.js",
     "start:dev": "ts-node-dev ./src/server",
     "typeorm": "typeorm-ts-node-commonjs",
