--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.9",
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.2"
   },
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.6.2",
     "typeorm": "^0.3.12"
   }
 }
